# stm32_bad_apple_client

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: main.rs
