[package]
name = "client"
version = "0.1.0"
authors = ["Denis Bykov <z.bykov.d@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"]}
defmt-rtt = "0.4.0"
defmt = "0.3.5"

numtoa = "0.2.4"

ssd1306 = "0.8.1"
embedded-graphics = "0.8.1"



[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal"
features = ["stm32f767", "rt"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
